# bookstore_app

./: README.md  docker-compose.yml
client/: Dockerfile  angular.json  package.json  tailwind.config.js
client/src/: index.html  styles.css
client/src/app/: app.component.html  app.component.ts  app.module.ts
client/src/app/components/book-dialog-form/: book-dialog-form.component.ts  create-book-dialog.component.css
client/src/app/components/book-item/: book-item.component.html  book-item.component.ts
client/src/app/components/create-book-dialog/: create-book-dialog.component.html  create-book-dialog.component.spec.ts  create-book-dialog.component.ts
client/src/app/services/: book.service.ts  local-book.service.spec.ts  local-book.service.ts
client/src/app/types/: Book.ts  book-service.d.ts
server/: Dockerfile  app.py  pyproject.toml
