[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Sebastian Arrieta <25210925+sarrietav-dev@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.scripts]
server = "server:main"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-RESTful = "^0.3.10"
Flask-SQLAlchemy = "^3.0.3"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"
psycopg2-binary = "^2.9.6"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
